tests db en interne

--- a/analytics/notebooks/exemple.ipynb
+++ b/analytics/notebooks/exemple.ipynb
@@ -9,65 +9,225 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Nous commencons par importer les librairies nécessaires pour l'analyse des données.\n",
     "\n",
     "import duckdb\n",
-    "import pandas as pd\n",
-    "\n",
-    "con = duckdb.connect(database=\"./../../database/data.duckdb\", read_only=True)"
+    "import pandas as pd\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "┌──────────────┬────────────────────────────┬──────────────────────┬───────────┬─────────────────────────────────┬────────────┐\n",
-      "│ inseecommune │         nomcommune         │       quartier       │ cdreseau  │            nomreseau            │ debutalim  │\n",
-      "│   varchar    │          varchar           │       varchar        │  varchar  │             varchar             │    date    │\n",
-      "├──────────────┼────────────────────────────┼──────────────────────┼───────────┼─────────────────────────────────┼────────────┤\n",
-      "│ 01001        │ ABERGEMENT-CLEMENCIAT (L') │ -                    │ 001000556 │ BDS ST DIDIER/CHALARONNE        │ 2010-09-07 │\n",
-      "│ 01002        │ ABERGEMENT-DE-VAREY (L')   │ -                    │ 001000369 │ L'ABERGEMENT-DE-VAREY           │ 2010-09-07 │\n",
-      "│ 01004        │ AMBERIEU-EN-BUGEY          │ Vareilles            │ 001000248 │ AMBERIEU VAREILLES              │ 2010-09-07 │\n",
-      "│ 01004        │ AMBERIEU-EN-BUGEY          │ St Germain_Brédevent │ 001000249 │ AMBERIEU SAINT GERMAIN DOUVRES  │ 2010-09-07 │\n",
-      "│ 01004        │ AMBERIEU-EN-BUGEY          │ ville                │ 001000251 │ AMBERIEU VILLE                  │ 2010-09-07 │\n",
-      "│ 01005        │ AMBERIEUX-EN-DOMBES        │ Est                  │ 001000850 │ BDS CHATANIER                   │ 2023-01-01 │\n",
-      "│ 01005        │ AMBERIEUX-EN-DOMBES        │ Ouest                │ 001000850 │ BDS CHATANIER                   │ 2021-08-01 │\n",
-      "│ 01006        │ AMBLEON                    │ -                    │ 001000235 │ AMBLEON                         │ 2010-09-07 │\n",
-      "│ 01007        │ AMBRONAY                   │ -                    │ 001000003 │ AMBRONAY                        │ 2010-09-07 │\n",
-      "│ 01008        │ AMBUTRIX                   │ Ambutrix centre      │ 001000254 │ AMBUTRIX MAIRIE                 │ 2010-09-07 │\n",
-      "│   ·          │    ·                       │ ·                    │     ·     │        ·                        │     ·      │\n",
-      "│   ·          │    ·                       │ ·                    │     ·     │        ·                        │     ·      │\n",
-      "│   ·          │    ·                       │ ·                    │     ·     │        ·                        │     ·      │\n",
-      "│ 21007        │ AISY-SOUS-THIL             │ -                    │ 021003565 │ SESAM, R. DE CHENESAINT         │ 2017-11-03 │\n",
-      "│ 21008        │ ALISE-SAINTE-REINE         │ Bourg                │ 021000642 │ ALISE SAINTE REINE              │ 2010-07-31 │\n",
-      "│ 21009        │ ALLEREY                    │ -                    │ 021001497 │ SIAEP DE LIERNAIS, R. D'HUILLY  │ 2010-07-31 │\n",
-      "│ 21010        │ ALOXE-CORTON               │ -                    │ 021000170 │ CABCS, R. D'ALOXE CORTON        │ 2010-07-31 │\n",
-      "│ 21011        │ AMPILLY-LES-BORDES         │ bourg                │ 021000645 │ AMPILLY LES BORDES, R.PPAL      │ 2010-07-31 │\n",
-      "│ 21011        │ AMPILLY-LES-BORDES         │ Meursauges/La Folie  │ 021000649 │ AMPILLY LES B.,R.MEUR.ET FOLIE  │ 2010-07-31 │\n",
-      "│ 21012        │ AMPILLY-LE-SEC             │ -                    │ 021000652 │ AMPILLY LE SEC                  │ 2010-07-31 │\n",
-      "│ 21013        │ ANCEY                      │ -                    │ 021001851 │ CC OUCHE MONTAGNE,R.BAS ET HAUT │ 2010-07-31 │\n",
-      "│ 21014        │ ANTHEUIL                   │ -                    │ 021000655 │ ANTHEUIL                        │ 2010-07-31 │\n",
-      "│ 21015        │ ANTIGNY-LA-VILLE           │ -                    │ 021002380 │ SIAEP D'ARNAY, R. MELANGE       │ 2010-07-31 │\n",
-      "├──────────────┴────────────────────────────┴──────────────────────┴───────────┴─────────────────────────────────┴────────────┤\n",
-      "│ ? rows (>9999 rows, 20 shown)                                                                                     6 columns │\n",
-      "└─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘\n",
-      "\n"
+      "C:\\Users\\emma.david\\AppData\\Local\\Temp\\ipykernel_22424\\2943702463.py:1: DtypeWarning: Columns (0,1,16) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  datab = pd.read_csv(r'C:\\Users\\emma.david\\Desktop\\data for good\\eau test\\draft-eau-tests\\database\\data_temporaire\\DIS_RESULT_2024.txt')\n"
      ]
+    }
+   ],
+   "source": [
+    "datab = pd.read_csv(\n",
+    "    r\"C:\\Users\\emma.david\\Desktop\\data for good\\eau test\\draft-eau-tests\\database\\data_temporaire\\DIS_RESULT_2024.txt\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cddept</th>\n",
+       "      <th>referenceprel</th>\n",
+       "      <th>cdparametresiseeaux</th>\n",
+       "      <th>cdparametre</th>\n",
+       "      <th>libmajparametre</th>\n",
+       "      <th>libminparametre</th>\n",
+       "      <th>libwebparametre</th>\n",
+       "      <th>qualitparam</th>\n",
+       "      <th>insituana</th>\n",
+       "      <th>rqana</th>\n",
+       "      <th>cdunitereferencesiseeaux</th>\n",
+       "      <th>cdunitereference</th>\n",
+       "      <th>limitequal</th>\n",
+       "      <th>refqual</th>\n",
+       "      <th>valtraduite</th>\n",
+       "      <th>casparam</th>\n",
+       "      <th>referenceanl</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>100138503</td>\n",
+       "      <td>ALTMICR</td>\n",
+       "      <td>1370.0</td>\n",
+       "      <td>ALUMINIUM TOTAL µG/L</td>\n",
+       "      <td>Aluminium total µg/l</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "      <td>L</td>\n",
+       "      <td>&lt;10</td>\n",
+       "      <td>µg/L</td>\n",
+       "      <td>133</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>&lt;=200 µg/L</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>7429-90-5</td>\n",
+       "      <td>100147233.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>100138503</td>\n",
+       "      <td>ASP</td>\n",
+       "      <td>6489.0</td>\n",
+       "      <td>ASPECT (QUALITATIF)</td>\n",
+       "      <td>Aspect (qualitatif)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>O</td>\n",
+       "      <td>L</td>\n",
+       "      <td>Aspect normal</td>\n",
+       "      <td>SANS OBJET</td>\n",
+       "      <td>X</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>100147232.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>100138503</td>\n",
+       "      <td>ASP</td>\n",
+       "      <td>6489.0</td>\n",
+       "      <td>ASPECT (QUALITATIF)</td>\n",
+       "      <td>Aspect (qualitatif)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>O</td>\n",
+       "      <td>L</td>\n",
+       "      <td>Aspect normal</td>\n",
+       "      <td>SANS OBJET</td>\n",
+       "      <td>X</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>100147233.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>100138503</td>\n",
+       "      <td>CL2LIB</td>\n",
+       "      <td>1398.0</td>\n",
+       "      <td>CHLORE LIBRE</td>\n",
+       "      <td>Chlore libre</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "      <td>T</td>\n",
+       "      <td>0,30</td>\n",
+       "      <td>mg(Cl2)/L</td>\n",
+       "      <td>165</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>100138503</td>\n",
+       "      <td>CL2TOT</td>\n",
+       "      <td>1399.0</td>\n",
+       "      <td>CHLORE TOTAL</td>\n",
+       "      <td>Chlore total</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "      <td>T</td>\n",
+       "      <td>0,34</td>\n",
+       "      <td>mg(Cl2)/L</td>\n",
+       "      <td>165</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.34</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  cddept referenceprel cdparametresiseeaux  cdparametre       libmajparametre  \\\n",
+       "0      1     100138503             ALTMICR       1370.0  ALUMINIUM TOTAL µG/L   \n",
+       "1      1     100138503                 ASP       6489.0   ASPECT (QUALITATIF)   \n",
+       "2      1     100138503                 ASP       6489.0   ASPECT (QUALITATIF)   \n",
+       "3      1     100138503              CL2LIB       1398.0          CHLORE LIBRE   \n",
+       "4      1     100138503              CL2TOT       1399.0          CHLORE TOTAL   \n",
+       "\n",
+       "        libminparametre  libwebparametre qualitparam insituana          rqana  \\\n",
+       "0  Aluminium total µg/l              NaN           N         L            <10   \n",
+       "1   Aspect (qualitatif)              NaN           O         L  Aspect normal   \n",
+       "2   Aspect (qualitatif)              NaN           O         L  Aspect normal   \n",
+       "3          Chlore libre              NaN           N         T           0,30   \n",
+       "4          Chlore total              NaN           N         T           0,34   \n",
+       "\n",
+       "  cdunitereferencesiseeaux cdunitereference limitequal     refqual  \\\n",
+       "0                     µg/L              133        NaN  <=200 µg/L   \n",
+       "1               SANS OBJET                X        NaN         NaN   \n",
+       "2               SANS OBJET                X        NaN         NaN   \n",
+       "3                mg(Cl2)/L              165        NaN         NaN   \n",
+       "4                mg(Cl2)/L              165        NaN         NaN   \n",
+       "\n",
+       "   valtraduite   casparam referenceanl  \n",
+       "0         0.00  7429-90-5  100147233.0  \n",
+       "1         0.00        NaN  100147232.0  \n",
+       "2         0.00        NaN  100147233.0  \n",
+       "3         0.30        NaN          NaN  \n",
+       "4         0.34        NaN          NaN  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Affichons les tables\n",
     "\n",
-    "con.table(\"sise_communes\").show()"
+    "datab.head()"
    ]
   },
   {
@@ -449,7 +609,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
