--- a/analytics/notebooks/exemple.ipynb
+++ b/analytics/notebooks/exemple.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -37,6 +37,24 @@
     "datab = pd.read_csv(\n",
     "    r\"C:\\Users\\emma.david\\Desktop\\data for good\\eau test\\draft-eau-tests\\database\\data_temporaire\\DIS_RESULT_2024.txt\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ça communique\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sert à vérif que tout communique bien\n",
+    "print(\"ça communique\")"
    ]
   },
   {
