--- a/analytics/notebooks/exemple.ipynb
+++ b/analytics/notebooks/exemple.ipynb
@@ -59,6 +59,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['cddept', 'referenceprel', 'cdparametresiseeaux', 'cdparametre',\n",
+       "       'libmajparametre', 'libminparametre', 'libwebparametre', 'qualitparam',\n",
+       "       'insituana', 'rqana', 'cdunitereferencesiseeaux', 'cdunitereference',\n",
+       "       'limitequal', 'refqual', 'valtraduite', 'casparam', 'referenceanl'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datab.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
