Nouveau notebook d'analyse

--- a/analytics/notebooks/exemple.ipynb
+++ b/analytics/notebooks/exemple.ipynb
@@ -83,6 +83,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pourquoi ça marche tjrs pas\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Pourquoi ça marche tjrs pas\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
