--- a/analytics/notebooks/premiereanalyse.ipynb
+++ b/analytics/notebooks/premiereanalyse.ipynb
@@ -263,10 +263,338 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cddept</th>\n",
+       "      <th>cdreseau</th>\n",
+       "      <th>inseecommuneprinc</th>\n",
+       "      <th>nomcommuneprinc</th>\n",
+       "      <th>cdreseauamont</th>\n",
+       "      <th>nomreseauamont</th>\n",
+       "      <th>pourcentdebit</th>\n",
+       "      <th>referenceprel</th>\n",
+       "      <th>dateprel</th>\n",
+       "      <th>heureprel</th>\n",
+       "      <th>conclusionprel</th>\n",
+       "      <th>ugelib</th>\n",
+       "      <th>distrlib</th>\n",
+       "      <th>moalib</th>\n",
+       "      <th>plvconformitebacterio</th>\n",
+       "      <th>plvconformitechimique</th>\n",
+       "      <th>plvconformitereferencebact</th>\n",
+       "      <th>plvconformitereferencechim</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1000003</td>\n",
+       "      <td>1007</td>\n",
+       "      <td>AMBRONAY</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>100139034</td>\n",
+       "      <td>2024-01-23</td>\n",
+       "      <td>11h27</td>\n",
+       "      <td>Eau d'alimentation conforme aux limites de qua...</td>\n",
+       "      <td>SI REGION D'AMBERIEU-EN-BUGEY</td>\n",
+       "      <td>SIE REGION D'AMBERIEU-EN-BUGEY</td>\n",
+       "      <td>SIE REGION D'AMBERIEU-EN-BUGEY</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>N</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1000003</td>\n",
+       "      <td>1007</td>\n",
+       "      <td>AMBRONAY</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>100139393</td>\n",
+       "      <td>2024-02-13</td>\n",
+       "      <td>12h49</td>\n",
+       "      <td>Eau d'alimentation conforme aux exigences de q...</td>\n",
+       "      <td>SI REGION D'AMBERIEU-EN-BUGEY</td>\n",
+       "      <td>SIE REGION D'AMBERIEU-EN-BUGEY</td>\n",
+       "      <td>SIE REGION D'AMBERIEU-EN-BUGEY</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1000003</td>\n",
+       "      <td>1007</td>\n",
+       "      <td>AMBRONAY</td>\n",
+       "      <td>1001304.0</td>\n",
+       "      <td>TTP (CLG) AMBRONAY</td>\n",
+       "      <td>100 %</td>\n",
+       "      <td>100139969</td>\n",
+       "      <td>2024-03-13</td>\n",
+       "      <td>10h46</td>\n",
+       "      <td>Eau d'alimentation conforme aux exigences de q...</td>\n",
+       "      <td>SI REGION D'AMBERIEU-EN-BUGEY</td>\n",
+       "      <td>SIE REGION D'AMBERIEU-EN-BUGEY</td>\n",
+       "      <td>SIE REGION D'AMBERIEU-EN-BUGEY</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1000003</td>\n",
+       "      <td>1007</td>\n",
+       "      <td>AMBRONAY</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>100140209</td>\n",
+       "      <td>2024-04-05</td>\n",
+       "      <td>07h27</td>\n",
+       "      <td>Eau d'alimentation conforme aux exigences de q...</td>\n",
+       "      <td>SI REGION D'AMBERIEU-EN-BUGEY</td>\n",
+       "      <td>SIE REGION D'AMBERIEU-EN-BUGEY</td>\n",
+       "      <td>SIE REGION D'AMBERIEU-EN-BUGEY</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1000003</td>\n",
+       "      <td>1007</td>\n",
+       "      <td>AMBRONAY</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>100140543</td>\n",
+       "      <td>2024-05-13</td>\n",
+       "      <td>12h43</td>\n",
+       "      <td>Eau d'alimentation conforme aux exigences de q...</td>\n",
+       "      <td>SI REGION D'AMBERIEU-EN-BUGEY</td>\n",
+       "      <td>SIE REGION D'AMBERIEU-EN-BUGEY</td>\n",
+       "      <td>SIE REGION D'AMBERIEU-EN-BUGEY</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  cddept cdreseau inseecommuneprinc nomcommuneprinc cdreseauamont  \\\n",
+       "0      1  1000003              1007        AMBRONAY           NaN   \n",
+       "1      1  1000003              1007        AMBRONAY           NaN   \n",
+       "2      1  1000003              1007        AMBRONAY     1001304.0   \n",
+       "3      1  1000003              1007        AMBRONAY           NaN   \n",
+       "4      1  1000003              1007        AMBRONAY           NaN   \n",
+       "\n",
+       "       nomreseauamont pourcentdebit referenceprel    dateprel heureprel  \\\n",
+       "0                 NaN           NaN     100139034  2024-01-23     11h27   \n",
+       "1                 NaN           NaN     100139393  2024-02-13     12h49   \n",
+       "2  TTP (CLG) AMBRONAY         100 %     100139969  2024-03-13     10h46   \n",
+       "3                 NaN           NaN     100140209  2024-04-05     07h27   \n",
+       "4                 NaN           NaN     100140543  2024-05-13     12h43   \n",
+       "\n",
+       "                                      conclusionprel  \\\n",
+       "0  Eau d'alimentation conforme aux limites de qua...   \n",
+       "1  Eau d'alimentation conforme aux exigences de q...   \n",
+       "2  Eau d'alimentation conforme aux exigences de q...   \n",
+       "3  Eau d'alimentation conforme aux exigences de q...   \n",
+       "4  Eau d'alimentation conforme aux exigences de q...   \n",
+       "\n",
+       "                          ugelib                        distrlib  \\\n",
+       "0  SI REGION D'AMBERIEU-EN-BUGEY  SIE REGION D'AMBERIEU-EN-BUGEY   \n",
+       "1  SI REGION D'AMBERIEU-EN-BUGEY  SIE REGION D'AMBERIEU-EN-BUGEY   \n",
+       "2  SI REGION D'AMBERIEU-EN-BUGEY  SIE REGION D'AMBERIEU-EN-BUGEY   \n",
+       "3  SI REGION D'AMBERIEU-EN-BUGEY  SIE REGION D'AMBERIEU-EN-BUGEY   \n",
+       "4  SI REGION D'AMBERIEU-EN-BUGEY  SIE REGION D'AMBERIEU-EN-BUGEY   \n",
+       "\n",
+       "                           moalib plvconformitebacterio plvconformitechimique  \\\n",
+       "0  SIE REGION D'AMBERIEU-EN-BUGEY                     C                     C   \n",
+       "1  SIE REGION D'AMBERIEU-EN-BUGEY                     C                     C   \n",
+       "2  SIE REGION D'AMBERIEU-EN-BUGEY                     C                     C   \n",
+       "3  SIE REGION D'AMBERIEU-EN-BUGEY                     C                     C   \n",
+       "4  SIE REGION D'AMBERIEU-EN-BUGEY                     C                     C   \n",
+       "\n",
+       "  plvconformitereferencebact plvconformitereferencechim  \n",
+       "0                          N                          C  \n",
+       "1                          C                          C  \n",
+       "2                          C                          C  \n",
+       "3                          C                          C  \n",
+       "4                          C                          C  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prelev.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>inseecommune</th>\n",
+       "      <th>nomcommune</th>\n",
+       "      <th>quartier</th>\n",
+       "      <th>cdreseau</th>\n",
+       "      <th>nomreseau</th>\n",
+       "      <th>debutalim</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>01001</td>\n",
+       "      <td>ABERGEMENT-CLEMENCIAT (L')</td>\n",
+       "      <td>-</td>\n",
+       "      <td>001000556</td>\n",
+       "      <td>BDS ST DIDIER/CHALARONNE</td>\n",
+       "      <td>2010-09-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>01002</td>\n",
+       "      <td>ABERGEMENT-DE-VAREY (L')</td>\n",
+       "      <td>-</td>\n",
+       "      <td>001000369</td>\n",
+       "      <td>L'ABERGEMENT-DE-VAREY</td>\n",
+       "      <td>2010-09-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>01004</td>\n",
+       "      <td>AMBERIEU-EN-BUGEY</td>\n",
+       "      <td>Vareilles</td>\n",
+       "      <td>001000248</td>\n",
+       "      <td>AMBERIEU VAREILLES</td>\n",
+       "      <td>2010-09-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>01004</td>\n",
+       "      <td>AMBERIEU-EN-BUGEY</td>\n",
+       "      <td>St Germain_Brédevent</td>\n",
+       "      <td>001000249</td>\n",
+       "      <td>AMBERIEU SAINT GERMAIN DOUVRES</td>\n",
+       "      <td>2010-09-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>01004</td>\n",
+       "      <td>AMBERIEU-EN-BUGEY</td>\n",
+       "      <td>ville</td>\n",
+       "      <td>001000251</td>\n",
+       "      <td>AMBERIEU VILLE</td>\n",
+       "      <td>2010-09-07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  inseecommune                  nomcommune              quartier   cdreseau  \\\n",
+       "0        01001  ABERGEMENT-CLEMENCIAT (L')                     -  001000556   \n",
+       "1        01002    ABERGEMENT-DE-VAREY (L')                     -  001000369   \n",
+       "2        01004           AMBERIEU-EN-BUGEY             Vareilles  001000248   \n",
+       "3        01004           AMBERIEU-EN-BUGEY  St Germain_Brédevent  001000249   \n",
+       "4        01004           AMBERIEU-EN-BUGEY                 ville  001000251   \n",
+       "\n",
+       "                        nomreseau   debutalim  \n",
+       "0        BDS ST DIDIER/CHALARONNE  2010-09-07  \n",
+       "1           L'ABERGEMENT-DE-VAREY  2010-09-07  \n",
+       "2              AMBERIEU VAREILLES  2010-09-07  \n",
+       "3  AMBERIEU SAINT GERMAIN DOUVRES  2010-09-07  \n",
+       "4                  AMBERIEU VILLE  2010-09-07  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "commune.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "o\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"o\")"
+   ]
   }
  ],
  "metadata": {
