ajout de dépendences fichier toml

--- a/analytics/notebooks/premiereanalyse.ipynb
+++ b/analytics/notebooks/premiereanalyse.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\emma.david\\AppData\\Local\\Temp\\ipykernel_12588\\2228173078.py:10: DtypeWarning: Columns (0,1,16) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  res = pd.read_csv(r\"C:\\Users\\emma.david\\Desktop\\data for good\\eau test\\draft-eau-tests\\database\\data_temporaire\\DIS_RESULT_2024.txt\")\n",
-      "C:\\Users\\emma.david\\AppData\\Local\\Temp\\ipykernel_12588\\2228173078.py:14: DtypeWarning: Columns (0,1,2,4,7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  prelev = pd.read_csv(r\"C:\\Users\\emma.david\\Desktop\\data for good\\eau test\\draft-eau-tests\\database\\data_temporaire\\DIS_PLV_2024.txt\")\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'geopandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mduckdb\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgeopandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgpd\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mshapely\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgeometry\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Point\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mfolium\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'geopandas'"
      ]
     }
    ],
@@ -21,6 +22,10 @@
     "\n",
     "import duckdb\n",
     "import pandas as pd\n",
+    "import geopandas as gpd\n",
+    "from shapely.geometry import Point\n",
+    "import folium\n",
+    "import os\n",
     "\n",
     "# On importe maintenant les données SISE-eaux, pour l'instant hebergé en \"local\" dans le GitHub en attendant le travail des data eng\n",
     "\n",
@@ -581,20 +586,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "o\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"o\")"
+    "# Lien avec une autre BDD pour obtenir les coordonnées géographiques des UDI\n",
+    "\n",
+    "udi = pd.read_csv(\n",
+    "    r\"C:\\Users\\emma.david\\Desktop\\data for good\\eau test\\draft-eau-tests\\database\\data eaurob\\CAP_PLV_202411.txt\"\n",
+    ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
